--- a/index.html
+++ b/index.html
@@ -251,21 +251,20 @@
       <h1 class="title">Projects</h1>
       <div class="experience-details-container">
         <div class="about-containers">
-          <h1 class="title" style="margin: 10rem auto 0;">Projects Not Hosted Yet !</h1>
-          <!-- <div class="details-container color-container"> -->
-          <!--   <div class="article-container"> -->
-          <!--     <img -->
-          <!--       src="assets/project-1.png" -->
-          <!--       alt="project-1" -->
-          <!--       class="project-img" -->
-          <!--     /> -->
-          <!--   </div> -->
-          <!--   <h2 class="experience-sub-title project-title">Project One</h2> -->
-          <!--   <div class="btn-container"> -->
-          <!--     <button class="btn btn-color-1 project-btn">Github</button> -->
-          <!--     <button class="btn btn-color-1 project-btn">Live Demo</button> -->
-          <!--   </div> -->
-          <!-- </div> -->
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="assets/uwutube.jpg"
+                alt="uwutube"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">uwutube</h2>
+            <div class="btn-container">
+              <button class="btn btn-color-1 project-btn" onclick="window.open('https://github.com/manishdeadflow/youtube-clone','_blank')" >Github</button>
+              <button class="btn btn-color-1 project-btn" onclick="window.open('https://uwutube.netlify.app','_blank')">Live Demo</button>
+            </div>
+          </div>
           <!-- <div class="details-container color-container"> -->
           <!--   <div class="article-container"> -->
           <!--     <img -->
