--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
               <p>Institute of Engineering & Technology, Indore</p>
             </div>
           </div>
-          <div class="text-container">
+          <div class="text-container" >
             <p>
-            👋 Hello! I'm Manish, an aspiring developer just beginning my journey into the world of coding and creation. <br/><br/>
+            👋 Hello! I'm Manish, an aspiring developer just beginning my journey into the world of coding and creation. <br/>
 
-             With a fresh start in development, I'm eagerly learning the ropes and building my skills one line of code at a time. Every challenge is an opportunity to grow and embrace the endless possibilities of technology. <br/><br/>
+             With a fresh start in development, I'm eagerly learning the ropes and building my skills one line of code at a time. Every challenge is an opportunity to grow and embrace the endless possibilities of technology. <br/>
 
-             When I'm not immersed in code, I enjoy playing Guitar ,Anime and reading Books, which add a touch of creativity and inspiration to my learning journey.<br/><br/>
+             When I'm not immersed in code, I enjoy playing Guitar ,Anime and reading Books, which add a touch of creativity and inspiration to my learning journey.
 
              Join me as I navigate the exciting landscape of development, and let's embark on this adventure together!<br/><br/>
              
