--- a/index.html
+++ b/index.html
@@ -136,35 +136,36 @@
                 <img src="assets/checkmark.png" alt="" class="icon" />
                 <div>
                   <h3>HTML</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
               <article>
                 <img src="assets/checkmark.png" alt="" class="icon" />
                 <div>
                   <h3>CSS</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
               <article>
                 <img src="assets/checkmark.png" alt="" class="icon" />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
               <article>
                 <img src="assets/checkmark.png" alt="" class="icon" />
                 <div>
                   <h3>Bootstrap</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
               <article>
                 <img src="assets/checkmark.png" alt="" class="icon" />
                 <div>
                   <h3>React JS</h3>
-                  <p>Intermediate</p>
+                </div>
+              </article>
+              <article>
+                <img src="assets/checkmark.png" alt="" class="icon" />
+                <div>
+                  <h3>Material Ui</h3>
                 </div>
               </article>
             </div>
@@ -176,63 +177,48 @@
                 <img src="assets/checkmark.png" alt="" class="icon" />
                 <div>
                   <h3>Node JS</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
               <article>
                 <img src="assets/checkmark.png" alt="" class="icon" />
                 <div>
                   <h3>Express JS</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
               <article>
                 <img src="assets/checkmark.png" alt="" class="icon" />
                 <div>
                   <h3>Python</h3>
-                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
                 <img src="assets/checkmark.png" alt="" class="icon" />
                 <div>
                   <h3>Flask</h3>
-                  <p>Beginner</p>
                 </div>
               </article>
               <article>
                 <img src="assets/checkmark.png" alt="" class="icon" />
                 <div>
                   <h3>Mongo DB</h3>
-                  <p>Experienced</p>
                 </div>
               </article>
               <article>
                 <img src="assets/checkmark.png" alt="" class="icon" />
                 <div>
                   <h3>Mysql</h3>
-                  <p>Expirenced</p>
                 </div>
               </article>
               <article>
                 <img src="assets/checkmark.png" alt="" class="icon" />
                 <div>
                   <h3>Git</h3>
-                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
                 <img src="assets/checkmark.png" alt="" class="icon" />
                 <div>
                   <h3>Docker</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img src="assets/checkmark.png" alt="" class="icon" />
-                <div>
-                  <h3>Kubernetes</h3>
-                  <p>Beginner</p>
                 </div>
               </article>
             </div>
